<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SnowReport</string>
    <string name="preferences_title">Preferences</string>
    <string name="refresh_title">Refresh</string>
    <string name="search_title">Search</string>
    <string name="resort_title">Resort title</string>
    
    <string name="region_title">Region</string>
    <string name="timeout_title">Download timeout</string>
    
    <string-array name="region_id">
      <item>favorites</item>
      <item>000</item>
      <item>007</item>
      <item>009</item>
      <item>001</item>
      <item>008</item>
      <item>002</item>
      <item>006</item>
      <item>005</item>
      <item>013</item>
      <item>003</item>
      <item>012</item>
      <item>011</item>
      <item>004</item>
    </string-array>
    
    <string-array name="region_title">
      <item>Favorites</item>
      <item>All Switzerland</item>
      <item>Bernese Oberland</item>
      <item>Geneva Region</item>
      <item>Graubünden</item>
      <item>NE / Jura / Bernese Jura</item>
      <item>Eastern Switzerland / Liechtenstein</item>
      <item>Swiss Mittelland</item>
      <item>Basel Region</item>
      <item>Fribourg Region</item>
      <item>Zurich Region</item>
      <item>Ticino</item>
      <item>Valais</item>
      <item>Central Switzerland</item>
    </string-array>
    
    <string-array name="timeout_id">
      <item>5000</item>
      <item>10000</item>
      <item>15000</item>
      <item>20000</item>
      <item>30000</item>
      <item>45000</item>
      <item>60000</item>
      <item>120000</item>
    </string-array>
    
    <string-array name="timeout_title">
      <item>5 seconds</item>
      <item>10 seconds (default)</item>
      <item>15 seconds</item>
      <item>20 seconds</item>
      <item>30 seconds</item>
      <item>45 seconds</item>
      <item>1 minute</item>
      <item>2 minutes</item>
    </string-array>
	
    <string name="show_webcam">Show webcam</string>
    <string name="show_webcam_on">Webcam is shown if available</string>
    <string name="show_webcam_off">Webcam is not shown</string>
	
    <string name="load_resorts">Loading resorts...</string>
    <string name="load_resort">Loading resort...</string>
	
    
    <string name="slopes_km">Open slopes</string>
    <string name="artificial_snow">Artificial snow</string>
    <string name="snow_state">Snow state</string>
    <string name="slopes_state">Slopes state</string>
    <string name="slopes_resort">Slope to the resort</string>
    <string name="last_update">Last update</string>
    
    <string name="bottom_altitude">Altitude in resort</string>
    <string name="nb_installations">Number of lifts</string>
    <string name="start_time">Open from</string>
    <string name="stop_time">Open until</string>
    <string name="phone">Phone number</string>
    <string name="webcam">Webcam</string>
    
    <string name="resorts_retrieval_error">Error when trying to get the resorts information. Try again later.</string>
    <string name="resort_retrieval_error">Error when trying to get the resort information. Try again later.</string>
    
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    
    <string name="search_hint">Search...</string>
    <string name="search_favorites">Search is not available in the "favorites" view.</string>
    
    
</resources>
